<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.GetStartedFragment">

    <TextView
        android:id="@+id/tvDescription"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layoutAuthButtons"

        android:text="@string/onboarding_get_started_desc1"

        android:layout_marginTop="20dp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDescription2"

        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        android:text="@string/onboarding_get_started_desc2"

        android:layout_marginTop="20dp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:id="@+id/layoutAuthButtons"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStart"
            android:text="@string/onboarding_get_started_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>