<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        tools:context=".ui.fragments.auth.LoginFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            app:cardElevation="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/app_icon"
                android:layout_gravity="center"
                android:background="@color/blue"
                android:contentDescription="@null"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/login_title"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginBottom="10dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginBottom="10dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:paddingEnd="40dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login_btn"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_user"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminate="true"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>

