<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.PlacesAndContactsFragment">

    <ImageView
        android:id="@+id/ivPlaces"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/places_img"

        app:layout_constraintTop_toBottomOf="@id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvTitle"

        app:layout_constraintTop_toBottomOf="@id/ivPlaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="50dp"

        android:text="@string/onboarding_pc_title"

        style="@style/MainTitle"

        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDescription"

        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/onboarding_pc_desc1"

        android:layout_marginTop="20dp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDescription2"

        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        android:text="@string/onboarding_pc_desc2"

        android:layout_marginTop="20dp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"

        />

</androidx.constraintlayout.widget.ConstraintLayout>